--- a/Shopping.css
+++ b/Shopping.css
@@ -77,6 +77,52 @@ h3{
 h2{
   margin-bottom: 15px;
 }
+.nav-info{
+margin: 0% auto;
+align-items: center;
+text-align:  center;
+margin-bottom: 15px;
+opacity: 90%;
+transition: 1s ease-in;
+}
+.nav-info a{
+text-decoration: none;
+text-align: center;
+align-items: center;
+justify-content: center;
+font-size: 12px;
+font-family: Georgia, 'Times New Roman', Times, serif;
+color: rgba(245, 222, 179, 0.842);
+text-shadow: 0px 1px 2px whitesmoke;
+letter-spacing: 1px;
+border: 1px solid blue;
+box-shadow: 0px 2px 0px rgba(135, 206, 250, 0.815);
+padding: 5px 10px;
+margin: 5px;
+border-radius: 10px;
+}
+
+body.lightStore .nav-info a:hover{
+border-bottom: 8px solid palevioletred;
+transition: 0.5s;
+
+}
+
+
+.nav-info a:hover{
+border-bottom: 8px solid palevioletred;
+transition: 0.5s;
+
+}
+body.lightStore .nav-info a{
+color: white;
+text-shadow: 2px 2px 4px rgba(255, 217, 0, 0.842);
+border-top: 2px solid rgba(153, 205, 50, 0.774);
+border-bottom: 1px solid crimson;
+background-color: rgba(0, 0, 0, 0.623);
+box-shadow: 0px 1px 0px darkblue;
+transition: 1s ease-out;
+}
 #language-selector{
 position: relative;
 font-family: Georgia, 'Times New Roman', Times, serif;
@@ -145,12 +191,88 @@ body.lightStore #search-input{
 background-color: rgba(221, 57, 112, 0.233);
 transition: 0.5s;
 }
-.product-List{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 30px;
-  padding: 10px;
+.product-List2{
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+gap: 40px;
+padding: 10px;
 }
+
+.product-List .product {
+text-decoration: none;
+transition: 1s;
+animation: moveNavbar 30s linear infinite; 
+animation-play-state: running;
+cursor: pointer;
+
+}
+
+.product-List .product:hover {
+color: #ff5722;
+transform: scale(1.10);
+transition: 0.5s;
+box-shadow: 0px 2px 10px gold;
+margin: 0% auto;
+position: relative;
+display: inline;
+cursor: pointer;
+
+}
+
+@keyframes moveNavbar {
+100% {
+  transform: translateX(100%);
+}
+100% {
+  transform: translateX(-500px);
+}
+}
+.product-List{
+margin: 0% auto;
+display: flex;
+flex-wrap: row;
+width: 370px;
+align-items: center;
+justify-content: space-between;
+border-right: 4px solid red;
+border-left: 4px solid blue;
+border-top: 4px solid rgba(255, 217, 0, 0.808);
+border-bottom: 4px solid rgba(255, 217, 0, 0.808);
+border-radius: 20px;
+overflow: scroll;
+gap: 20px;
+padding: 10px;
+}
+.product-List::-webkit-scrollbar{
+background: transparent;
+width: 0px;
+height: 15px;
+
+}
+.product-List::-webkit-scrollbar-track{
+background: transparent;
+box-shadow: 0px 2px 6px yellowgreen;
+border-radius: 20px;
+width: 0;
+height: 0;
+}
+
+.product-List::-webkit-scrollbar-thumb{
+background: darkblue;
+border: 1px solid rgba(255, 217, 0, 0.781);
+border-radius: 10px;
+width: 0px;
+height: 0px;
+cursor: grab;
+}
+.product-List::-webkit-scrollbar-thumb:hover{
+background-color: green;
+
+}
+.product-List::-webkit-scrollbar-thumb:active{
+cursor: grabbing;
+}
+
 .product img{
   margin: 0% auto;
   width: 150px;
@@ -204,6 +326,7 @@ body.lightStore .product img{
   position: relative;
 }
 .cart{
+
   list-style: none;
   text-decoration: none;
   margin: 0% auto;
@@ -217,7 +340,7 @@ body.lightStore .product img{
   border: 1px solid rgba(255, 217, 0, 0.514);
   box-shadow: 0px 2px 6px darkgray;
   overflow: scroll;
-  height: 30vh;
+  height: 20vh;
 }
 .cart::-webkit-scrollbar{
   width: 10px;
@@ -244,6 +367,7 @@ body.lightStore .cart::-webkit-scrollbar{
   color: white;
   text-shadow: 2px 2px 4px darkblue;
   text-decoration: underline;
+  font-size: 20px;
   margin-top: -15px;
 }
 #cart-items{
@@ -259,13 +383,15 @@ p{
   text-shadow: 2px 2px 4px gold;
 }
 @media  (min-width: 768px) {
-
-  .product-List{
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 40px;
-      padding: 10px;
-  }
+.product-List{
+  display: none;
+}
+.product-List2{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+  padding: 10px;
+}
   h1{
      margin: 0% auto;
      font-size: 40px;
@@ -276,8 +402,12 @@ p{
  }
  .cart{
   min-width: 50%;
-  height: 40vh;
+  height: 200px;
  }
+ .cart h2{
+  font-size: 25px;
+
+}
  #cart-container{
   max-width: 600px;
  }
@@ -328,32 +458,38 @@ body.lightStore .cart-badge{
 background-color: magenta;
 
 }
-/* Style for the cart container */
+
 .cart {
-  display: block; /* Initially show the cart */
+  display: block; 
   padding: 20px;
   border: 1px solid #ccc;
   margin-top: 10px;
-}
-.cart img{
-  width: 50px;
-  height: 50px;
-  padding: 2px;
-  border: 1px solid lightskyblue;
-  box-shadow: 0px 2px 6px white;
-  border-radius: 8px;
 }
 body.lightStore .cart img{
   border: 1px solid gold;
   box-shadow: 0px 2px 6px yellowgreen;
 }
 
-/* Hide cart by default */
+
 .cart.hidden {
   display: none;
 }
+#cart-items img{
+  width:  30px;
+  height: 30px;
+  padding: 2px;
+  border: 1px solid lightskyblue;
+  box-shadow: 0px 2px 6px white;
+  border-radius: 8px;
+}
+#cart-items{
+  font-size: 15px;
+}
+#cart-items input{
+  width: 50px;
+  padding: 0;
+}
 
-/* Style for the "Show/Hide" button */
 #toggle-cart {
   padding: 10px 20px;
   background-color: blue;
@@ -732,10 +868,17 @@ body.lightStore .product{
   height: 0px;
   width: 0px;
 }
-.Box{
-
-}
 @media (min-width: 768px) {
+  .nav-info{
+    position: absolute;
+    left: 5px;
+    gap: 10px;
+    opacity: 90%;
+    
+  }
+  .nav-info a{
+    margin: 5px;
+  }
   .container{
     margin: 0% auto;
     display: block;
@@ -841,8 +984,24 @@ background-position: center;
 body.lightStore h5 ion-icon{
 box-shadow: 0px 2px 15px blue;
 }
+#cart-items img{
+width:  50px;
+height: 50px;
+padding: 2px;
+border: 1px solid lightskyblue;
+box-shadow: 0px 2px 6px white;
+border-radius: 8px;
+}
+#cart-items{
+font-size: 18px;
+}
+#cart-items input{
+width: 100px;
+padding: 5px;
+}
 
 } 
+
 
 
 
