--- a/Shopping.css
+++ b/Shopping.css
@@ -1019,6 +1019,10 @@ padding: 5px;
   padding: 5px;
   border-radius: 10px;
 }
+.Buy-Now-Tag:hover{
+  transform: scale(1.10);
+  transition: 0.5s;
+}
 body.lightStore .Buy-Now-Tag{
   border-top: 2px solid yellowgreen;
   border-bottom:2px solid yellowgreen;
